# flight_checker

./: .gitignore  airlines.json  airports.json  my_database.db  pyproject.toml  startup_bot.py
checker/: api.py  bot.py  db_adapter.py
handler/: info_save.py
sys_files/: bot_creation.py
