[tool.poetry]
name = "aviachecker"
version = "0.1.0"
description = "Aviasales bot, ticket checker"
authors = ["Ogurche <337398@edu.itmo.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
aiogram = "^3.4.1"
requests = "^2.31.0"
pandas = "^2.2.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
